Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ steps:
    
   displayName: 'Install Dependencies'
 - script: |
-   npm run test:unit
+   npm run test
 
    displayName: 'Testing the application'
 - script: |
